# ytb-practical-guide

./: .gitignore  README.md
Istio Practical - Traffic Control - Part 1/: destination-rule.yaml  gateway.yaml  vs.yaml
adk-multi-agent/: .env.example  README.md  pyproject.toml
agent-basics/: pyproject.toml
agent-basics/agent_basics/chat/: agent.py  raw_chat.py  raw_instruct.py
agent-basics/agent_basics/function_calling/: agent.py  raw.py
agent-basics/agent_basics/simple/: agent.py  raw.py
agentic-rag-pydanticai/: .env.example  .gitignore  README.md  pyproject.toml
agentic-rag-pydanticai/data/: charizard.md  mewtwo.md  pikachu.md  slowpoke.md
agentic-rag-pydanticai/src/: 00-ingestion.py  01-basic-rag.py  02a-rag-as-tool.py  02b-rag-as-system-prompt.py  02c-rag-combined.py  03-agentic-rag.py  utils.py
agentic-rag-pydanticai/src/agents/: extractor.py  finalizer.py  planner.py  retriever.py
autogen-agent-workflow-patterns/: .gitignore  pyproject.toml
autogen-agent-workflow-patterns/workflow_patterns/sequence/: agent_tf_impact.py  agent_tf_risk_assessment.py  agent_tf_translator.py  agent_user.py  main.py  plan.txt
autogen-agent-workflow-patterns/workflow_patterns/two_agent/: agent_panda.py  agent_qa_bot.py  group_chat.py  main.py
autogen-k8s-basic/: README.md  pyproject.toml
autogen-k8s-basic/k8s/: k3d.yaml
autogen-k8s-basic/src/: agent_engineer.py  agent_expert.py  agent_user.py  agent_utils.py  k8s_adaptor.py  main.py
autogen-multi-team/: pyproject.toml
autogen-multi-team/autogen_cloud_run/: main.py
autogen-multi-team/autogen_cloud_run/containerization/: __init__.py  agent_cloud_run_deploy.py  agent_docker_builder.py
autogen-multi-team/autogen_cloud_run/dockerfile/: agent_dockerfile.py  group_chat.py
autogen-multi-team/autogen_cloud_run/toolchain_discovery/: __init__.py  agent_language_detector.py  agent_toolchain_director.py  group_chat.py
autogen-multi-team/autogen_cloud_run/utils/: agent_cmd_executor.py  agent_executor.py  agent_file_reader.py  agent_file_writer.py  agent_user.py  config_list.py  helpers.py  human_proxy.py
autogen-multi-team/autogen_multi_team/: main.py
autogen-multi-team/autogen_multi_team/containerization/: agent_cloud_run_deploy.py  group_chat.py
autogen-multi-team/autogen_multi_team/dockerfile/: __init__.py  agent_dockerfile.py  group_chat.py
autogen-multi-team/autogen_multi_team/toolchain_discovery/: agent_formatter.py  agent_language_detector.py
autogen-multi-team/autogen_multi_team/utils/: agent_file_lister.py  agent_file_reader.py  agent_file_writer.py  config_list.py
autogen-multi-team/my-app/: .eslintrc.cjs  .prettierrc.json  Dockerfile  package.json  pnpm-lock.yaml
autogen-multi-team/my-app/src/app/: layout.tsx  page.tsx
autogen-workflows/: README.md  note.md  pyproject.toml
autogen-workflows/src/advanced/: agent_paraphrazer.py  agent_section_analyzer.py  agent_tasks.py  agent_topic_analyzer.py  group_chat.py  group_chat_manager.py  main.py
autogen-workflows/src/basic/: agent_summarizer.py  agent_title_gen.py  agent_user.py  group_chat.py  main.py
baml-agents/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
building-agents-with-mcp/: README.md  pyproject.toml
crawl4ai-101/: .cursorrules  compose.yaml  pyproject.toml
crawl4ai-101/src/: 01-hello-crawl.py  02-crawl-relevant.py  03-ai-summarize.py  04-structured-output.py
crawl4ai-101/src/client/: __init__.py  api.py  helpers.py  models.py
crewai-basic/: .gitignore  pyproject.toml
crewai-basic/src/: k8s_adaptor.py  main.py
crewai-gemini/: .gitignore  Readme.md  custom_callbacks.py  litellm.yaml  pyproject.toml
crewai-gemini/crewai_gemini/: main.py  tools.py
dspy-101/: .env.example  .gitignore  README.md  classify-intent.json  main.py  pyproject.toml
generative-ai-roadmap-2025/: README.md  (+1 more)
langgraph-101/: pyproject.toml
langgraph-101-task-management/: .env.example  README.md  pyproject.toml
langgraph-101-task-management/data/: YourTechBud.json
langgraph-101-task-management/src/: 01-first-graph.py  02-basic-read.py  03-basic-read-pydantic.py  04-mixing-it-up.py  05-final-graph.py
langgraph-101-task-management/src/agents/: intent_classifier.py  task_manager.py  task_reader.py  title_matcher.py
langgraph-101/k8s_bot/: agent_engineer.py  agent_expert.py  graph_k8s.py  graph_main.py  graph_user_input.py  helpers.py  k8s_tools.py  main.py  model.py  state.py  state_k8s.py  state_main.py  state_user_input.py
langgraph-101/k8s_bot/agents/: bot.py  engineer.py  expert.py  human_input.py  input_verifier.py  k8s_tools.py  ns_identifier.py
langgraph-101/k8s_bot/k8s_agents/: engineer.py  expert.py  k8s_tools.py  ns_identifier.py
langgraph-studio/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
langgraph-studio/src/agent/: graph.py  state.py
langgraph-studio/src/agent/helpers/: task_manager.py  task_reader.py  title_matcher.py
langgraph-studio/src/agent/utils/: tasks.py
langgraph-studio/tests/integration_tests/: test_graph.py
langgraph-studio/tests/unit_tests/: test_configuration.py
pydantic-graphs-101/: README.md  pyproject.toml
pydantic-graphs-101/src/: 00_humble_call.py  01_first_graph.py  02a_passing_data-nodes.py  02b_passing_data-state.py  02c_passing_data-deps.py  03_flow_control.py  04_real_deal.py
pydantic-graphs-101/src/agents/: task_manager.py  task_summarizer.py  title_matcher.py
pydantic-graphs-101/src/utils/: model.py
rag-101/: README.md  pyproject.toml
rag-101/data/: pichu.md  raichu.md
rag-101/rag_101/: 01_humble_call.py  02_hack_the_rag.py  03_playing_with_vectors.py  04_first_rag.py  05_first_rag_again.py  06_smarter_rag.py  utils.py
scripts/: env.sh
tf-plan-explainer/: plan_instance-type-change  plan_instance-type-change.json  plan_instance-type-change.txt  plan_simple-volume-change  plan_simple-volume-change.json  plan_simple-volume-change.txt  plan_update-ami-latest  plan_update-ami-latest.json  plan_update-ami-latest.txt  pyproject.toml
tf-plan-explainer/tf_plan_explainer/: agent_tf_summarizer.py  agent_user.py  main.py
(+223 files in other folders)
