[tool.poetry]
name = "workflow_patterns"
version = "0.1.0"
description = ""
authors = ["Noorain Panjwani <noorain.panjwani@xebia.com>"]
readme = "README.md"

[tool.poetry.scripts]
sequence = "workflow_patterns.sequence.main:main"
two-agent = "workflow_patterns.two_agent.main:main"

[tool.poetry.dependencies]
python = "~3.10"
ag2 = "^0.2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
