[tool.poetry]
name = "autogen-k8s-basic"
version = "0.1.0"
description = ""
authors = ["Noorain Panjwani <noorain.panjwani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ag2 = "^0.1.14"
kubernetes = "^28.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"