[tool.poetry]
name = "k8s_bot"
version = "0.1.0"
description = ""
authors = ["Noorain Panjwani <noorain.panjwani@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
k8s = "k8s_bot.graph_k8s:main"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.21"
langchain-openai = "^0.2.0"
kubernetes = "^30.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
